# Vindicta-CLI

./: .actrc  .gitignore  .pre-commit-config.yaml  .secrets.example  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml  sitemap.xml
.agent/workflows/: speckit.tasks.md
.gemini/commands/: speckit.clarify.toml  speckit.constitution.toml  speckit.implement.toml  speckit.plan.toml  speckit.specify.toml  speckit.tasks.toml
.github/act/: pull_request.json  push.json
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/prompts/: spec-bot.md
.windsurf/rules/: specify-rules.md
.windsurf/workflows/: speckit.implement.md  speckit.plan.md
SETUP/: index.html
adr/000-template/: index.html
docs/: SETUP.md  commands.md  contributing.md  index.md  installation.md
docs/adr/: 0000-record-architecture-decisions.md  0001-use-markdown-architectural-decision-records.md  0002-python-as-primary-language.md  0003-pre-commit-hooks-required.md  001-python-language.md  002-precommit-required.md
docs/proposals/: feat-013-unified-cli.md
installation/: index.html
scripts/: check_wip_tests.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/SETUP/: index.html
site/commands/: index.html
site/contributing/: index.html
site/installation/: index.html
site/search/: search_index.json
specs/001-dev-commands/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/vindicta_cli/: __init__.py  main.py
tests/: conftest.py
tests/contract/: test_cli_contract.py
workflows/: speckit.plan.md
(+53 files in other folders)
