[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vindicta-cli"
version = "0.1.0"
description = "Unified command-line interface for Vindicta"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.0",
]

[project.scripts]
vindicta = "vindicta_cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vindicta_cli"]

[tool.ruff]
line-length = 88
target-version = "py310"
